--- a/sass/components/_conteiner.scss
+++ b/sass/components/_conteiner.scss
@@ -1,5 +1,6 @@
 .conteiner {
-  width: 1200px;
+  // width: 1200px;
+  width: 480px;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
