--- a/sass/components/_secondary-title.scss
+++ b/sass/components/_secondary-title.scss
@@ -3,6 +3,7 @@
   font-size: 36px;
   line-height: 42px;
   text-align: center;
-  padding-bottom: 50px;
+  // padding-bottom: 50px;
+  padding-bottom: 30px;
   color: var(--secondary-title-color);
 }
