--- a/sass/components/_conteiner.scss
+++ b/sass/components/_conteiner.scss
@@ -1,7 +1,9 @@
 .conteiner {
-  // width: 1200px;
-  width: 480px;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
+
+  @media screen and (max-width: 480px) {
+    max-width: 480px;
+  }
 }
