--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -17,8 +17,12 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 
+  // margin-bottom: 30px;
+}
+.team-list__item:not(:last-child) {
   margin-bottom: 30px;
 }
+
 .team-conteiner {
   padding-top: 30px;
   padding-bottom: 24px;
