add section footer

--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -4,7 +4,7 @@
   font-size: 26px;
   line-height: 1.19;
   color: #000000;
-  margin-right: 93px;
+  // margin-right: 93px;
 }
 .logo__text {
   color: var(--acsent-color);
