--- a/CSS/main.css
+++ b/CSS/main.css
@@ -107,7 +107,6 @@ img {
   cursor: pointer;
   width: 200px;
   height: 50px;
-  display: flex;
   justify-content: center;
   align-items: center;
 }
@@ -118,7 +117,6 @@ img {
   font-size: 26px;
   line-height: 1.19;
   color: #000000;
-  margin-right: 93px;
 }
 
 .logo__text {
@@ -457,7 +455,6 @@ textarea:focus {
 
 .hero {
   background-color: #2f303a;
-  min-width: 480px;
   margin: 0 auto;
   padding-top: 118px;
   padding-bottom: 118px;
@@ -465,6 +462,12 @@ textarea:focus {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+}
+
+@media screen and (min-width: 480px) {
+  .hero {
+    width: 480px;
+  }
 }
 
 .hero__title {
@@ -487,6 +490,7 @@ textarea:focus {
 
 .hero__btn {
   margin: 0 auto;
+  display: flex;
   border: none;
 }
 
@@ -611,8 +615,8 @@ textarea:focus {
 .customers-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: center;
+  margin-top: -30px;
 }
 
 .customers-list__link {
@@ -633,8 +637,12 @@ textarea:focus {
 }
 
 .customers-list__item {
+  padding-top: 30px;
+}
+
+.customers-list__item:nth-child(2n) {
   flex-basis: calc(100% / 2 - 30px);
-  margin-bottom: 30px;
+  padding-left: 30px;
 }
 
 .customer-list__icon {
@@ -760,12 +768,11 @@ textarea:focus {
 }
 
 .footer__conteiner {
-  display: flex;
+  text-align: center;
 }
 
 .footer-nav {
-  display: flex;
-  flex-direction: column;
+  text-align: center;
 }
 
 .footer-logo {
@@ -777,10 +784,6 @@ textarea:focus {
   color: var(--primary-title-color);
 }
 
-.footer-adress {
-  width: 231px;
-}
-
 .adress-list {
   text-decoration: none;
   font-family: 'Roboto', sans-serif;
@@ -788,7 +791,7 @@ textarea:focus {
 }
 
 .adress-list__item:not(:last-child) {
-  margin-bottom: 9px;
+  margin-bottom: 8px;
 }
 
 .adress-list__city {
@@ -811,8 +814,7 @@ textarea:focus {
 }
 
 .footer-links {
-  margin-left: 70px;
-  padding-top: 12px;
+  padding-top: 60px;
 }
 
 .footer-links__text {
@@ -821,7 +823,6 @@ textarea:focus {
 
 .footer-sotial-list {
   display: flex;
-  justify-content: left;
 }
 
 .footer-sotial-list__link {
@@ -830,10 +831,6 @@ textarea:focus {
 
 .footer-sotial-list__icon {
   fill: #ffffff;
-}
-
-.footer-form {
-  display: flex;
 }
 
 .footer-form__input {
@@ -847,9 +844,7 @@ textarea:focus {
 }
 
 .footer-form-btn {
-  padding-top: 12px;
-  margin-left: 93px;
-  width: 570px;
+  padding-top: 60px;
 }
 
 .footer-btn-tumb {
@@ -857,7 +852,7 @@ textarea:focus {
   border: 0px;
   margin-left: 12px;
   height: 50px;
-  padding-top: 35px;
+  padding-top: 20px;
 }
 
 .btn-footer {
