--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -10,7 +10,7 @@
   cursor: pointer;
   width: 200px;
   height: 50px;
-  display: flex;
+  // display: flex;
   justify-content: center;
   align-items: center;
 }
