--- a/sass/layout/_customers.scss
+++ b/sass/layout/_customers.scss
@@ -6,8 +6,9 @@
 .customers-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: center;
+  margin-top: -30px;
+  // align-items: center;
 }
 .customers-list__link {
   width: 170px;
@@ -32,8 +33,13 @@
 // }
 
 .customers-list__item {
+  padding-top: 30px;
+}
+
+.customers-list__item:nth-child(2n) {
   flex-basis: calc(100% / 2 - 30px);
-  margin-bottom: 30px;
+  // padding-bottom: 30px;
+  padding-left: 30px;
 }
 
 .customer-list__icon {
