--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,7 +1,7 @@
 .hero {
   background-color: #2f303a;
   // height: 400px;
-  min-width: 480px;
+  // min-width: 480px;
   margin: 0 auto;
   padding-top: 118px;
   padding-bottom: 118px;
@@ -21,6 +21,9 @@
   //   padding-top: 200px;
   //   padding-bottom: 200px;
   // }
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
 }
 .hero__title {
   font-weight: 900;
@@ -40,6 +43,7 @@
 
 .hero__btn {
   margin: 0 auto;
+  display: flex;
   border: none;
   & :hover {
     background: #188ce8;
