--- a/CSS/main.css
+++ b/CSS/main.css
@@ -470,6 +470,18 @@ textarea:focus {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .hero {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    width: 1600px;
+  }
+}
+
 .hero__title {
   font-weight: 900;
   font-size: 26px;
