--- a/sass/components/_conteiner.scss
+++ b/sass/components/_conteiner.scss
@@ -2,6 +2,8 @@
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
+  padding-top: 60px;
+  // padding-bottom: 60px;
 
   // @media screen and (max-width: 480px) {
   //   max-width: 480px;
@@ -14,5 +16,7 @@
   }
   @media screen and (min-width: 1200px) {
     width: 1200px;
+    padding-top: 94px;
+    // padding-bottom: 94px;
   }
 }
