--- a/sass/components/_secondary-title.scss
+++ b/sass/components/_secondary-title.scss
@@ -1,9 +1,14 @@
 .secondary-title {
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 42px;
   text-align: center;
   // padding-bottom: 50px;
   padding-bottom: 30px;
   color: var(--secondary-title-color);
+
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 50px;
+    font-size: 36px;
+  }
 }
