--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -1,5 +1,5 @@
 .section {
   margin: 0 auto;
-  padding-top: 60px;
-  padding-bottom: 60px;
+  // padding-top: 60px;
+  // padding-bottom: 60px;
 }
