--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -1,7 +1,9 @@
 .about {
-  padding-bottom: 94px;
-  @media (max-width: 480px) {
+  @media (max-width: 1199px) {
     display: none;
+  }
+  @media screen and (min-width: 1200px) {
+    display: block;
   }
 }
 
