--- a/sass/layout/_feature.scss
+++ b/sass/layout/_feature.scss
@@ -1,17 +1,32 @@
-.feature {
-  // padding-top: 94px;
-  padding-top: 60px;
-  // padding-bottom: 60px;
-}
-// .feature-list {
-//   // display: flex;
-//   //
-//   padding-left: 15px;
-//   padding-right: 15px;
+// .feature {
+//   // padding-top: 94px;
+//   // padding-top: 60px;
+//   // padding-bottom: 60px;
 // }
-.feature-list__item:not(:last-child) {
-  // margin-left: 30px;
-  padding-bottom: 30px;
+.feature-list {
+  @media screen and(min-width:768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+    //   flex-basis: calc(100% - 2 * 30px) / 2;
+    // }
+  }
+
+  @media screen and (min-width: 1200px) {
+    flex-wrap: nowrap;
+  }
+}
+
+.feature-list__item {
+  @media screen and (min-width: 768px) {
+    width: calc(50% - 30px);
+    margin-left: 30px;
+    margin-top: 30px;
+  }
+  // @media screen and (min-width: 1200px) {
+  //   width: calc((100% -) / 2);
+  // }
 }
 
 .feature-list__icon-fon {
