--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -28,7 +28,7 @@
     width: 768px;
   }
   @media screen and (min-width: 1200px) {
-    width: 1600px;
+    max-width: 1600px;
   }
 }
 .hero__title {
