start works with section customers

--- a/sass/components/_conteiner.scss
+++ b/sass/components/_conteiner.scss
@@ -3,7 +3,7 @@
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 60px;
-  // padding-bottom: 60px;
+  padding-bottom: 60px;
 
   // @media screen and (max-width: 480px) {
   //   max-width: 480px;
@@ -17,6 +17,6 @@
   @media screen and (min-width: 1200px) {
     width: 1200px;
     padding-top: 94px;
-    // padding-bottom: 94px;
+    padding-bottom: 94px;
   }
 }
