--- a/CSS/main.css
+++ b/CSS/main.css
@@ -65,6 +65,7 @@ img {
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 @media screen and (min-width: 480px) {
@@ -83,6 +84,7 @@ img {
   .conteiner {
     width: 1200px;
     padding-top: 94px;
+    padding-bottom: 94px;
   }
 }
 
@@ -628,14 +630,42 @@ textarea:focus {
   background-color: #f5f4fa;
 }
 
+.team-list {
+  margin-top: -30px;
+}
+
+@media screen and (min-width: 768px) {
+  .team-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-list {
+    flex-wrap: nowrap;
+  }
+}
+
 .team-list__item {
+  margin-top: 30px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
-.team-list__item:not(:last-child) {
-  margin-bottom: 30px;
+@media screen and (min-width: 768px) {
+  .team-list__item {
+    margin-left: 30px;
+    width: calc(50% - 30px);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-list__item {
+    flex-basis: calc(100% / 4 - 30px);
+  }
 }
 
 .team-conteiner {
@@ -665,6 +695,13 @@ textarea:focus {
   flex-wrap: wrap;
   justify-content: center;
   margin-top: -30px;
+  margin-left: -30px;
+}
+
+.customers-list__item {
+  max-width: calc(50% - 30px);
+  margin-left: 30px;
+  margin-top: 30px;
 }
 
 .customers-list__link {
@@ -684,18 +721,8 @@ textarea:focus {
   border: 1px solid var(--acsent-color);
 }
 
-.customers-list__item {
-  padding-top: 30px;
-}
-
-.customers-list__item:nth-child(2n) {
-  flex-basis: calc(100% / 2 - 30px);
-  padding-left: 30px;
-}
-
 .customer-list__icon {
-  width: 106px;
-  height: 60px;
+  width: max-content;
 }
 
 .categories {
