--- a/sass/layout/_customers.scss
+++ b/sass/layout/_customers.scss
@@ -8,8 +8,20 @@
   flex-wrap: wrap;
   justify-content: center;
   margin-top: -30px;
+  margin-left: -30px;
   // align-items: center;
 }
+
+.customers-list__item {
+  // flex-basis: calc(100% / 2 - 30px);
+  max-width: calc(50% - 30px);
+  margin-left: 30px;
+  margin-top: 30px;
+  // @media screen and (min-width: 768px) {
+  //   flex-basis: ;
+  // }
+}
+
 .customers-list__link {
   width: 170px;
   height: 92px;
@@ -28,21 +40,8 @@
   }
 }
 
-// .customers-list__item + .customers-list__item {
-//   margin-left: 30px;
-// }
-
-.customers-list__item {
-  padding-top: 30px;
-}
-
-.customers-list__item:nth-child(2n) {
-  flex-basis: calc(100% / 2 - 30px);
-  // padding-bottom: 30px;
-  padding-left: 30px;
-}
-
 .customer-list__icon {
-  width: 106px;
-  height: 60px;
+  width: max-content;
+  // width: 106px;
+  // height: 60px;
 }
