--- a/sass/components/_sotial.scss
+++ b/sass/components/_sotial.scss
@@ -1,6 +1,6 @@
 .sotial-list {
   display: flex;
-  margin-left: -10px;
+  // margin-left: -10px;
   justify-content: center;
   // width: 270px;
 }
