--- a/sass/layout/_customers.scss
+++ b/sass/layout/_customers.scss
@@ -1,7 +1,8 @@
-// .customers {
-//   padding-top: 94px;
-//   padding-bottom: 94px;
-// }
+.customers {
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 86px;
+  }
+}
 
 .customers-list {
   display: flex;
@@ -10,20 +11,24 @@
   margin-top: -30px;
   margin-left: -30px;
   // align-items: center;
+  @media screen and (min-width: 1200px) {
+    flex-wrap: nowrap;
+  }
 }
 
 .customers-list__item {
-  // flex-basis: calc(100% / 2 - 30px);
-  max-width: calc(50% - 30px);
+  flex-basis: calc(100% / 2 - 30px);
+  // max-width: calc(100% / 2 - 30px);
   margin-left: 30px;
   margin-top: 30px;
-  // @media screen and (min-width: 768px) {
-  //   flex-basis: ;
-  // }
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 3 - 30px);
+  }
 }
 
 .customers-list__link {
-  width: 170px;
+  // width: 170px;
   height: 92px;
   display: flex;
   justify-content: center;
@@ -41,7 +46,6 @@
 }
 
 .customer-list__icon {
-  width: max-content;
-  // width: 106px;
-  // height: 60px;
+  width: 106px;
+  height: 60px;
 }
