--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -13,11 +13,11 @@
   background-position: center;
   background-repeat: no-repeat;
 
-  @media screen and (min-width: 480px) {
-    width: 480px;
+  @media screen and (max-width: 480px) {
+    max-width: 480px;
   }
   @media screen and (min-width: 768px) {
-    width: 768px;
+    max-width: 768px;
   }
   @media screen and (min-width: 1200px) {
     max-width: 1600px;
