--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,13 +1,20 @@
-.categories {
-  padding-top: 94px;
-}
+// .categories {
+//   padding-top: 94px;
+// }
 .categories-list {
   display: flex;
-  margin-bottom: 50px;
-  justify-content: center;
+  flex-wrap: wrap;
+  // margin-bottom: 50px;
+  margin-top: -15px;
+  margin-bottom: 40px;
+  // justify-content: center;
+  @media screen and (min-width: 768px) {
+    justify-content: center;
+  }
 }
 .categories-list__item {
   margin-left: 8px;
+  margin-top: 15px;
 }
 
 .categories-list__btn {
@@ -22,10 +29,11 @@
   text-align: center;
   cursor: pointer;
   border: 0px;
-  padding-left: 22px;
-  padding-right: 22px;
-  padding-top: 6px;
-  padding-bottom: 6px;
+  // padding-left: 22px;
+  // padding-right: 22px;
+  // padding-top: 6px;
+  // padding-bottom: 6px;
+  padding: 6px 25px;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
