--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,19 +4,39 @@
 }
 
 .conteiner__head {
-  display: flex;
-  align-items: center;
+  // display: flex;
+  // align-items: center;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: center;
+  }
+  @media screen and (min-width: 1200px) {
+    padding-top: 0;
+  }
 }
 
 .navigation {
-  display: flex;
-  align-items: center;
+  // display: flex;
+  // align-items: center;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .header-list {
-  display: flex;
+  // display: flex;
   padding-top: 32px;
   padding-bottom: 32px;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    margin-left: 87px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-left: 93px;
+  }
 }
 
 .header-list__item {
@@ -63,30 +83,44 @@
 }
 
 .contacts-list {
-  display: flex;
+  // display: flex;
   margin-left: auto;
   align-items: center;
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
 }
 
+// .contacts-list__item {
+//   &:not(:last-child) {
+//     margin-right: 50px;
+//   }
+// }
 .contacts-list__item {
-  &:not(:last-child) {
-    margin-right: 50px;
+  @media screen and (min-width: 768px) {
+    margin-top: 10px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-top: 0px;
+    &:not(:last-child) {
+      margin-right: 50px;
+    }
   }
 }
 
 .contacts-list__link {
   display: flex;
-  justify-content: center;
+  // justify-content: center;
   align-items: center;
 
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+  // font-size: 14px;
+  // line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
 
-  padding-bottom: 32px;
-  padding-top: 32px;
+  // padding-bottom: 32px;
+  // padding-top: 32px;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover .contacts-list__icon,
@@ -96,6 +130,15 @@
   &:hover,
   &:focus {
     color: var(--acsent-color);
+  }
+
+  @media screen and (min-width: 768px) {
+    font-size: 12px;
+    line-height: 1.17;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.14;
   }
 }
 
