--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -10,6 +10,10 @@
   // justify-content: center;
   @media screen and (min-width: 768px) {
     justify-content: center;
+    margin-bottom: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 48px;
   }
 }
 .categories-list__item {
@@ -48,17 +52,31 @@
 }
 
 .categories-projects {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -30px;
-  margin-top: -30px;
+  // display: flex;
+  // flex-wrap: wrap;
+  // margin-left: -30px;
+  // margin-top: -30px;
+  // text-align: center;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+  }
 }
 .categories-projects__list {
-  flex-basis: calc(100% / 3 - 30px);
-  margin-left: 30px;
+  // flex-basis: calc(100% / 3 - 30px);
+  // margin-left: 30px;
   margin-top: 30px;
 
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
+  }
+  @media screen and(min-width: 1200px) {
+    flex-basis: calc(100% / 3 - 30px);
+  }
 }
 .categories-projects__list:hover,
 .categories-projects__list:focus {
@@ -103,6 +121,10 @@
   padding-bottom: 20px;
   padding-left: 24px;
   border: 1px solid #eeeeee;
+
+  @media screen and (max-width: 480px) {
+    text-align: start;
+  }
 }
 
 .projects-name__title {
