--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -5,6 +5,12 @@
   line-height: 1.19;
   color: #000000;
   // margin-right: 93px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  @media screen and (min-width: 768px) {
+    padding-top: 26px;
+    padding-bottom: 26px;
+  }
 }
 .logo__text {
   color: var(--acsent-color);
