--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,6 +1,11 @@
 .header {
   margin: 0 auto;
   border-bottom: 1px solid #ececec;
+
+  position: relative;
+  @media screen and (max-width: 767px) {
+    width: 480px;
+  }
 }
 
 .conteiner__head {
@@ -18,18 +23,95 @@
 }
 
 .navigation {
-  // display: flex;
-  // align-items: center;
+  display: flex;
+  align-items: center;
+
+  @media screen and (max-width: 480px) {
+    flex-direction: row;
+  }
   @media screen and (min-width: 768px) {
     display: flex;
     align-items: center;
   }
 }
 
+.menu-button {
+  display: inline-flex;
+  // margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+
+  margin-left: auto;
+  z-index: 3;
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+}
+
+.menu-button .icon-cross {
+  display: none;
+}
+
+.menu-button.is-open .icon-cross {
+  display: block;
+}
+
+.menu-button.is-open .icon-menu {
+  display: none;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+}
+
+.menu-conteiner {
+  width: 480px;
+  &.is-open {
+    display: block;
+    z-index: 2;
+  }
+  @media screen and (max-width: 767px) {
+    display: none;
+    background-color: rgba(255, 255, 255, 1);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vh;
+    height: 796px;
+    padding-left: 40px;
+    padding-top: 54px;
+  }
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
+}
+.menu-contact {
+  margin-top: 64px;
+  margin-left: -20px;
+}
+
+.menu-contact__item {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  color: var(--acsent-color);
+
+  margin-left: 20px;
+  &:not(:last-child) {
+    border-right: 1px solid;
+  }
+}
+// .menu-conteiner.is-open {
+//   display: block;
+// }
+
 .header-list {
   // display: flex;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  // padding-top: 32px;
+  // padding-bottom: 32px;
+  margin-top: -32px;
+
   @media screen and (min-width: 768px) {
     display: flex;
     margin-left: 87px;
@@ -40,6 +122,10 @@
 }
 
 .header-list__item {
+  @media screen and (max-width: 767px) {
+    margin-top: 32px;
+    // margin-left: 32px;
+  }
   &:not(:last-child) {
     margin-right: 50px;
   }
@@ -60,6 +146,10 @@
   &:focus {
     color: var(--acsent-color);
   }
+  @media screen and (max-width: 767px) {
+    font-size: 40px;
+    line-height: 1.17;
+  }
 }
 
 .header-list {
@@ -69,16 +159,18 @@
 }
 
 .current {
-  &:after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
+  @media screen and (min-width: 768px) {
+    &:after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
 
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    background-color: var(--acsent-color);
+      width: 100%;
+      height: 4px;
+      border-radius: 2px;
+      background-color: var(--acsent-color);
+    }
   }
 }
 
@@ -86,6 +178,12 @@
   // display: flex;
   margin-left: auto;
   align-items: center;
+  @media screen and (max-width: 767px) {
+    margin-top: 302px;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: flex-start;
+  }
   @media screen and (min-width: 1200px) {
     display: flex;
   }
@@ -97,6 +195,18 @@
 //   }
 // }
 .contacts-list__item {
+  @media screen and (max-width: 767px) {
+    &:nth-last-child(2) {
+      margin-top: 32px;
+    }
+    &:hover {
+      font-size: 34px;
+      font-weight: 1.17;
+      // scale: 1.4;
+      // margin-left: 40px;
+    }
+    // margin-left: 32px;
+  }
   @media screen and (min-width: 768px) {
     margin-top: 10px;
   }
@@ -147,7 +257,11 @@
   height: 12px;
   margin-right: 10px;
   fill: var(--primary-text-color);
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
 }
+
 .contacts-list__tel {
   width: 10px;
   height: 16px;
