--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -89,6 +89,12 @@
   overflow: hidden;
 }
 
+// .progect-box__img {
+//   @media screen and (max-width: 767px) {
+//     background-size: cover;
+//   }
+// }
+
 .projects-box__fon {
   position: absolute;
   top: 0;
