--- a/CSS/main.css
+++ b/CSS/main.css
@@ -415,12 +415,12 @@ textarea:focus {
 .header {
   margin: 0 auto;
   border-bottom: 1px solid #ececec;
-  position: relative;
 }
 
 @media screen and (max-width: 767px) {
   .header {
     width: 480px;
+    position: relative;
   }
 }
 
@@ -433,12 +433,14 @@ textarea:focus {
   .conteiner__head {
     display: flex;
     align-items: center;
+    margin: 0 auto;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .conteiner__head {
     padding-top: 0;
+    margin: 0 auto;
   }
 }
 
@@ -517,24 +519,30 @@ textarea:focus {
 @media screen and (min-width: 768px) {
   .menu-conteiner {
     display: flex;
+    align-items: center;
+    width: 100%;
   }
 }
 
 .menu-contact {
   margin-top: 64px;
-  margin-left: -20px;
 }
 
 .menu-contact__item {
-  font-weight: 500px;
-  font-size: 18px;
-  line-height: 1.22;
-  color: var(--acsent-color);
-  margin-left: 20px;
+  padding-left: 10px;
 }
 
 .menu-contact__item:not(:last-child) {
   border-right: 1px solid;
+  padding-right: 10px;
+  border-color: rgba(33, 33, 33, 0.2);
+}
+
+.menu-contacts__links {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  color: var(--acsent-color);
 }
 
 .header-list {
@@ -544,13 +552,14 @@ textarea:focus {
 @media screen and (min-width: 768px) {
   .header-list {
     display: flex;
-    margin-left: 87px;
+    margin-left: 88px;
+    margin-top: 0px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .header-list {
-    margin-left: 93px;
+    margin-left: 92px;
   }
 }
 
@@ -618,9 +627,16 @@ textarea:focus {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .contacts-list {
+    margin-left: 90px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .contacts-list {
     display: flex;
+    margin-left: 315px;
   }
 }
 
@@ -645,7 +661,7 @@ textarea:focus {
     margin-top: 0px;
   }
   .contacts-list__item:not(:last-child) {
-    margin-right: 50px;
+    margin-right: 30px;
   }
 }
 
@@ -653,6 +669,8 @@ textarea:focus {
   display: flex;
   align-items: center;
   font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1144,6 +1162,13 @@ textarea:focus {
 .footer-logo {
   display: block;
   margin-bottom: 20px;
+}
+
+@media screen and (min-width: 480px) {
+  .footer-logo {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
 }
 
 .footer-logo__customization {
