--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,9 +2,9 @@
   margin: 0 auto;
   border-bottom: 1px solid #ececec;
 
-  position: relative;
   @media screen and (max-width: 767px) {
     width: 480px;
+    position: relative;
   }
 }
 
@@ -16,9 +16,13 @@
   @media screen and (min-width: 768px) {
     display: flex;
     align-items: center;
+    margin: 0 auto;
+    // padding-top: 26px;
+    // padding-bottom: 26px;
   }
   @media screen and (min-width: 1200px) {
     padding-top: 0;
+    margin: 0 auto;
   }
 }
 
@@ -84,23 +88,34 @@
   }
   @media screen and (min-width: 768px) {
     display: flex;
+    align-items: center;
+    width: 100%;
   }
 }
 .menu-contact {
   margin-top: 64px;
-  margin-left: -20px;
+  // margin-left: -20px;
+  // @media screen and (min-width: 768px) {
+  //   display: none;
+  // }
 }
 
 .menu-contact__item {
+  // margin-left: 20px;
+  padding-left: 10px;
+  &:not(:last-child) {
+    border-right: 1px solid;
+    padding-right: 10px;
+
+    border-color: rgba(33, 33, 33, 0.2);
+  }
+}
+
+.menu-contacts__links {
   font-weight: 500;
   font-size: 18px;
   line-height: 1.22;
   color: var(--acsent-color);
-
-  margin-left: 20px;
-  &:not(:last-child) {
-    border-right: 1px solid;
-  }
 }
 // .menu-conteiner.is-open {
 //   display: block;
@@ -114,10 +129,11 @@
 
   @media screen and (min-width: 768px) {
     display: flex;
-    margin-left: 87px;
+    margin-left: 88px;
+    margin-top: 0px;
   }
   @media screen and (min-width: 1200px) {
-    margin-left: 93px;
+    margin-left: 92px;
   }
 }
 
@@ -184,16 +200,15 @@
     flex-direction: column-reverse;
     align-items: flex-start;
   }
+  @media screen and (min-width: 768px) {
+    margin-left: 90px;
+  }
   @media screen and (min-width: 1200px) {
     display: flex;
+    margin-left: 315px;
   }
 }
 
-// .contacts-list__item {
-//   &:not(:last-child) {
-//     margin-right: 50px;
-//   }
-// }
 .contacts-list__item {
   @media screen and (max-width: 767px) {
     &:nth-last-child(2) {
@@ -202,10 +217,7 @@
     &:hover {
       font-size: 34px;
       font-weight: 1.17;
-      // scale: 1.4;
-      // margin-left: 40px;
     }
-    // margin-left: 32px;
   }
   @media screen and (min-width: 768px) {
     margin-top: 10px;
@@ -213,7 +225,7 @@
   @media screen and (min-width: 1200px) {
     margin-top: 0px;
     &:not(:last-child) {
-      margin-right: 50px;
+      margin-right: 30px;
     }
   }
 }
@@ -224,7 +236,9 @@
   align-items: center;
 
   font-weight: 500;
+  font-size: 24px;
   // font-size: 14px;
+  line-height: 1.17;
   // line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
