--- a/CSS/main.css
+++ b/CSS/main.css
@@ -68,12 +68,6 @@ img {
   padding-bottom: 60px;
 }
 
-@media screen and (min-width: 480px) {
-  .conteiner {
-    width: 480px;
-  }
-}
-
 @media screen and (min-width: 768px) {
   .conteiner {
     width: 768px;
@@ -419,7 +413,7 @@ textarea:focus {
 
 @media screen and (max-width: 767px) {
   .header {
-    width: 480px;
+    max-width: 480px;
     position: relative;
   }
 }
@@ -427,6 +421,12 @@ textarea:focus {
 .conteiner__head {
   padding-top: 0px;
   padding-bottom: 0px;
+}
+
+@media screen and (max-width: 479px) {
+  .conteiner__head {
+    min-width: 350px;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -447,12 +447,6 @@ textarea:focus {
 .navigation {
   display: flex;
   align-items: center;
-}
-
-@media screen and (max-width: 480px) {
-  .navigation {
-    flex-direction: row;
-  }
 }
 
 @media screen and (min-width: 768px) {
