--- a/sass/components/_conteiner.scss
+++ b/sass/components/_conteiner.scss
@@ -8,9 +8,9 @@
   // @media screen and (max-width: 480px) {
   //   max-width: 480px;
   // }
-  @media screen and (min-width: 480px) {
-    width: 480px;
-  }
+  // @media screen and (max-width: 480px) {
+  //   max-width: 480px;
+  // }
   @media screen and (min-width: 768px) {
     width: 768px;
   }
