--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -47,3 +47,9 @@
     background: #188ce8;
   }
 }
+
+// .hero__btn.is-open .menu-button {
+//   @media screen and (max-width: 479px) {
+//     display: none;
+//   }
+// }
