--- a/CSS/main.css
+++ b/CSS/main.css
@@ -68,6 +68,12 @@ img {
   padding-bottom: 60px;
 }
 
+@media screen and (max-width: 767px) {
+  .conteiner {
+    max-width: 480px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .conteiner {
     width: 768px;
@@ -421,12 +427,6 @@ textarea:focus {
 .conteiner__head {
   padding-top: 0px;
   padding-bottom: 0px;
-}
-
-@media screen and (max-width: 479px) {
-  .conteiner__head {
-    min-width: 350px;
-  }
 }
 
 @media screen and (min-width: 768px) {
@@ -793,6 +793,12 @@ textarea:focus {
   background: #188ce8;
 }
 
+@media screen and (max-width: 479px) {
+  .hero__btn.is-open .menu-button {
+    display: none;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .feature-list {
     display: flex;
@@ -1064,6 +1070,7 @@ textarea:focus {
 
 .categories-projects__list {
   margin-top: 30px;
+  max-width: 450px;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
