--- a/sass/components/_conteiner.scss
+++ b/sass/components/_conteiner.scss
@@ -5,12 +5,10 @@
   padding-top: 60px;
   padding-bottom: 60px;
 
-  // @media screen and (max-width: 480px) {
-  //   max-width: 480px;
-  // }
-  // @media screen and (max-width: 480px) {
-  //   max-width: 480px;
-  // }
+  @media screen and (max-width: 767px) {
+    max-width: 480px;
+  }
+
   @media screen and (min-width: 768px) {
     width: 768px;
   }
