--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -38,6 +38,9 @@
 
   @media screen and (max-width: 480px) {
     width: calc(100% - 30px);
+    // width: 100%;
+    // margin-left: 15px;
+    // margin-right: 15px;
   }
   @media screen and (min-width: 481px) {
     width: 450px;
