--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -52,11 +52,6 @@
 }
 
 .categories-projects {
-  // display: flex;
-  // flex-wrap: wrap;
-  // margin-left: -30px;
-  // margin-top: -30px;
-  // text-align: center;
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
@@ -68,6 +63,7 @@
   // flex-basis: calc(100% / 3 - 30px);
   // margin-left: 30px;
   margin-top: 30px;
+  max-width: 450px;
 
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   @media screen and (min-width: 768px) {
