--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -8,21 +8,42 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url('../image/img-hero.jpg');
+    url('/image/Hero_mobile.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+}
 
-  @media screen and (max-width: 480px) {
-    max-width: 480px;
-  }
-  @media screen and (min-width: 768px) {
-    max-width: 768px;
-  }
-  @media screen and (min-width: 1200px) {
-    max-width: 1600px;
+@media (min-resolution: 2dppx) {
+  .hero {
+    background-image: url(/image/Hero_mobile@2x.jpg);
   }
 }
+
+@media (min-width: 481px) and (max-width: 768px) {
+  .hero {
+    background-image: url(/image/Hero_tablet.jpg);
+  }
+
+  @media (min-resolution: 2dppx) {
+    .hero {
+      background-image: url(/image/Hero_tablet@2x.jpg);
+    }
+  }
+}
+
+@media (min-width: 769px) {
+  .hero {
+    background-image: url(/image/Hero_desktop.jpg);
+  }
+
+  @media (min-resolution: 2dppx) {
+    .hero {
+      background-image: url(/image/Hero_desktop@2x.jpg);
+    }
+  }
+}
+
 .hero__title {
   font-weight: 900;
   font-size: 26px;
